This approach to starting/stopping tomcat should work
git-svn-id: https://svn.apache.org/repos/asf/incubator/openejb/trunk/openejb1@446058 13f79535-47bb-0310-9956-ffa450edef68